--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 				</div>
 				<ul class="nav-list">
 					<li>
-						<a href="home">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="articles">Articles</a>
@@ -115,11 +115,11 @@
                         <div class="profilehide"><img class="profilehide" src="https://images.fok.al/content/IZJWJgvXBHNV?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"></div>
 					</header>
 					<section class="pt5 pb4">
-						<p class="lh-copy measure f4 mt0">I hope you see how I fit into your workspace. I built this site as a side project after learning CSS and HTML from Brady Teufel at Cal Poly, San Luis Obispo. Components have been borrowed from Tachyons.io, and fancybox3.<br>
+						<p class="lh-copy measure f4 mt0">I built this site as a side project after learning CSS and HTML from Brady Teufel at Cal Poly, San Luis Obispo. Components have been borrowed from Tachyons.io, and fancybox3.<br>
 						<br>
 						I am a journalism major at Cal Poly, where I have written for the student newspaper for past two years and learned photojournalism, After Effects, Premiere, InDesign and Illustrator.<br>
 						<br>
-						I hope you enjoy my work, and that this site shows you what I can contribute to your team.<br>
+						I hope you enjoy my work, and that this site shows what I can contribute.<br>
 						<br>
 						Stay connected through the platforms I linked to at the bottom.</p>
 					</section>
