--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -36,25 +36,15 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>     
- <!---The following sets up the favicons--->
 
-<link rel="apple-touch-icon" sizes="57x57" href="HammockClub/img/fav/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="HammockClub/img/fav/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="HammockClub/img/fav/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="HammockClub/img/fav/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="HammockClub/img/fav/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="HammockClub/img/fav/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="HammockClub/img/fav/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="HammockClub/img/fav/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="HammockClub/img/fav/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="HammockClub/img/fav/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="HammockClub/img/fav/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="HammockClub/img/fav/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="HammockClub/img/fav/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="img/fav/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">   
+ <!---The following sets up the favicons--->
+<link rel="apple-touch-icon" sizes="180x180" href="img/favhclub/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favhclub/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favhclub/favicon-16x16.png">
+<link rel="manifest" href="img/favhclub/site.webmanifest">
+<link rel="mask-icon" href="img/favhclub/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
 
  
