--- a/downloads/downloads.html
+++ b/downloads/downloads.html
@@ -11,10 +11,10 @@
 <title>Aidan McGloin | Multimedia Journalist, Photographer, Designer, Reporter</title>
 
 <!--link tags are for linking to external files, in this case your CSS stylesheet-->
-<link href="style3.css" rel="stylesheet" type="text/css">
+<link href="aidanmcgloin.com/style3.css" rel="stylesheet" type="text/css">
 	
 <!--link tags are for linking to external files, in this case a special CSS stylesheet-->
-<link href="normalize.css" rel="stylesheet" type="text/css">
+<link href="aidanmcgloin.com/normalize.css" rel="stylesheet" type="text/css">
 
 <!--the following tag tells the browser to adjust the site according to screen size-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
