--- a/download.html
+++ b/download.html
@@ -89,7 +89,7 @@ $('#slider').cycle({});
 
     
 <article>
-    <a href a="aidanmcgloin.com/downloads/CSUSystemwideCleryAct">2018 Systemwide CSU Security Report Excel </a>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href a="aidanmcgloin.com/downloads/CSUSystemwideCleryAct">2018 Systemwide CSU Security Report Excel </a>
     </article>
     
   
