--- a/download.html
+++ b/download.html
@@ -88,9 +88,7 @@ $('#slider').cycle({});
 <br><br><br><br>
 
     
-<article>
-    <a class="db pv4 ph3 ph0-l no-underline grey dim" href a="aidanmcgloin.com/downloads/CSUSystemwideCleryAct">2018 Systemwide CSU Security Report Excel </a>
-    </article>
+<h2>Hi! If you're here, it's because I said you could use my aggregation of CSU-wide security reports. Unfortunately, I jumped the gun, and the excel sheet will be provided here only after the story I am working on is published. Check back in about a week!</h2>
     
   
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
