--- a/download.html
+++ b/download.html
@@ -88,7 +88,8 @@ $('#slider').cycle({});
 <br><br><br><br>
 
     
-<h2>Hi! If you're here, it's because I said you could use my aggregation of CSU-wide security reports. Unfortunately, I jumped the gun, and the excel sheet will be provided here only after the story I am working on is published. Check back in about a week!</h2>
+	<h2>Hi!</h2>
+	<p>If you're here, it's because I said you could use my aggregation of CSU-wide security reports. Unfortunately, I jumped the gun, and the excel sheet will be provided here only after the story I am working on is published. Check back in about a week!</p>
     
   
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
