--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -63,7 +63,7 @@
           <a href="#top">Top</a>
         </li>
         <li>
-            <a href="calendar">Calendar</a>
+            <a href="#calendar">Calendar</a>
       </li>
          <li>
           <a href="#hammockmap">Hammock Map</a>
