--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <!---The following sets up the favicons--->
-<link rel="apple-touch-icon" sizes="57x57" href="HammockClub/img/favicon_package_v0.16/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="HammockClub/img/favicon_package_v0.16/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="HammockClub/img/favicon_package_v0.16/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="HammockClub/img/favicon_package_v0.16/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="HammockClub/img/favicon_package_v0.16/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="HammockClub/img/favicon_package_v0.16/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="HammockClub/img/favicon_package_v0.16/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="HammockClub/img/favicon_package_v0.16/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="HammockClub/img/favicon_package_v0.16/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="HammockClub/img/favicon_package_v0.16/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="HammockClub/img/favicon_package_v0.16/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="HammockClub/img/favicon_package_v0.16/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="HammockClub/img/favicon_package_v0.16/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="57x57" href="img/favicon_package_v0.16/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="img/favicon_package_v0.16/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="img/favicon_package_v0.16/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="img/favicon_package_v0.16/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="img/favicon_package_v0.16/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="img/favicon_package_v0.16/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="img/favicon_package_v0.16/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="img/favicon_package_v0.16/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="img/favicon_package_v0.16/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon_package_v0.16/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon_package_v0.16/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="img/favicon_package_v0.16/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon_package_v0.16/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="HammockClub/img/favicon_package_v0.16/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="img/favicon_package_v0.16/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <head>
 	<!--The following displays language used in browser to interpret page -->
