--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -201,13 +201,13 @@
 </div>
        <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="img/sam-2.jpg" class="br-100" title="Photo of Sam Nelson">
-    <h1 class="f4">Sam Nelson</h1>
-      <h4>Outreach Coordinator</h4>
+    <img src="img/eva.jpg" class="br-100" title="Photo of Eva Caisse">
+    <h1 class="f4">Eva Caisse</h1>
+      <h4>Vice President</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
-    Sam is a third year flat earth science major with a minor in self serving philanthropy. He grew up in Madagascar and sailed to California at the age of 15 using a dingy and 50 hammocks to act as sails. In his free time, he enjoys acting angsty and surfing.
+    I like dollars, I like diamonds, I like stunting, I like shining I like million dollar deals but mostly I like trees and hanging in fabric high in their branches. The indoors stresses me out, hit me up if you wanna get wild in the wild! I will likely be down.
   </p>
 </div>
          <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
