deleted old files, updated resume

--- a/resume.html
+++ b/resume.html
@@ -98,9 +98,10 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Experience</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times-</b>Editorial Intern, Jaunary 2019-Present<br>Covering South San Luis Obispo County for a weekly paper</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Web Editor, January 2019-present<br>Online multimedia assistance for college reporters </p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016-December 2018<br>College staff reporter, covering administration and student life </p>
       <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy-</b>Journalism Fellow, September 2017-Present<br>Work with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
- <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016-Present<br>Full-time staff reporter; beats have included administration and student life
-</p>
       <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe-</b>Busser, September 2016-July 2017
 </p>
   </div>
@@ -111,7 +112,7 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Education</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo-</b>Journalism major, Law and Society minor, graduating in June 2020
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo-</b>Journalism major, Law and Society minor, graduating in December 2019
  </p>
 <p class="lh-copy measure mt4 mt0-ns"><b class="org">Redlands High School-</b>Graduated June 2016
 </p>
@@ -124,10 +125,10 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Skills</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism-</b>Data Journalism, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, News writing, InDesign, After Effects, Adobe Illustrator</p>
-    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding-</b>Web Design, HTML, CSS, JQuery, SEO, Python
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism-</b>Data Journalism, Interviewing, News writing, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, InDesign, After Effects, Adobe Illustrator, Public Record Requests, SEO, Newspaper layout</p>
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding-</b>Web Design, HTML, CSS, JaveScript, JQuery, Python
 </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Miscellaneous-</b>First Aid, CPR, AED
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Miscellaneous-</b>First Aid, CPR, AED, 
 </p>
   </div>
 </article>
@@ -138,7 +139,13 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Awards</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Jay Garner Memorial Scholarship-</b>Cal Poly Journalsim Department, 2017<br><b class="org">Eagle Scout-</b>Boy Scouts of America, 2015<br><b class="org">Merit of Superior Distinction-</b>National Speech and Debate Association, 2016<br><b class="org">Advanced Placement Scholar of Distinction-</b>College Board, 2016
+      <p class="lh-copy measure mt4 mt0-ns">
+          <b class="org">Lucas Clark and Aja Goare Scholarship-</b>the Grant family, 2018<br>
+          <b class="org">Glenn Smith Memorial Scholarship-</b>Cal Poly Journalism Department, 2018<br>
+          <b class="org">Jay Garner Memorial Scholarship-</b>Cal Poly Journalsim Department, 2017<br>
+          <b class="org">Eagle Scout-</b>Boy Scouts of America, 2015<br>
+          <b class="org">Merit of Superior Distinction-</b>National Speech and Debate Association, 2016<br>
+          <b class="org">Advanced Placement Scholar of Distinction-</b>College Board, 2016</p>
   </div>
 </article>
     
@@ -149,7 +156,8 @@ $('#slider').cycle({});
   <div class="fn fl-ns w-50-ns">
       <p class="lh-copy measure mt4 mt0-ns">Cooking<br>Bike maintenance<br>Writing<br>Speech and Debate<br>Hiking<br>Backpacking<br>Camping<br>Reading
   </div>
-</article>
+    </article>
+    </section>
     </div>  
     
 <!----Beginning of footer---->    
