--- a/resume.html
+++ b/resume.html
@@ -79,6 +79,9 @@ $('#slider').cycle({});
         <li>
           <a href="multimedia">Multimedia</a>
         </li>
+                          					<li>
+						<a href="blog">Blog</a>
+					</li>
       </ul>
 </nav>
 </div>
