--- a/home.html
+++ b/home.html
@@ -211,8 +211,11 @@
     <h1 class="mb3 mt0 lh-title">Experience</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy-</b>Journalism Fellow, September 2017-Present
- <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times-</b>Editorial Intern, Jaunary 2019-Present<br>Covering South San Luis Obispo County for a weekly paper</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Web Editor, January 2019-present<br>Online multimedia assistance for college reporters </p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016-December 2018<br>College staff reporter, covering administration and student life </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy-</b>Journalism Fellow, September 2017-Present<br>Work with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe-</b>Busser, September 2016-July 2017
 </p>
   </div>
 </article>
