--- a/photos.html
+++ b/photos.html
@@ -83,6 +83,9 @@
         <li>
           <a href="multimedia">Multimedia</a>
         </li>
+	  				<li>
+						<a href="blog">Blog</a>
+					</li>
       </ul>
 </nav>
 </div>
@@ -104,7 +107,7 @@
   </header>
   <div class="row ph3 ph4-m ph5-l">
     <p class="lh-copy f5 f3-m f1-l measure center pv4">
-        I shoot primarily with a Sony Alpha 330 with kit lenses. It's not great, I know.</p> 
+        I shoot primarily with a Sony Alpha 330 with kit lenses.</p> 
   <div class="f5 f3-m lh-copy">
       <div class="cf dt-l w-100 pv4">
         <div class="grow captioncontainer  dtc-l v-mid mw6 pr3-l">
@@ -115,7 +118,7 @@
         <div class="dtc-l v-mid f6 f5-m f4-l measure-l">
           <p class="measure pv4-l center">
             <span class="fw9 fw4-ns">
-                My camera performs horribly in low light situations. I loaned it to my photo editor once, and he told me, "I hate your camera. I never want to use your camera again." <br><br>It is my camera though, and there is a lot I can do with it.</span>
+               
           </p>
         </div>
       </div>
