--- a/multimedia.html
+++ b/multimedia.html
@@ -90,6 +90,9 @@ $('#slider').cycle({});
         <li>
           <a href="multimedia">Multimedia</a>
         </li>
+	  				<li>
+						<a href="blog">Blog</a>
+					</li>
       </ul>
 </nav>
 </div>
