--- a/home.html
+++ b/home.html
@@ -110,12 +110,12 @@
 	<div class="topdiv">
 		<!--Full Bleed Background-->
 		<article data-name="article-full-bleed-background">
-			<div class="cf" style="background: url(https://images.fok.al/content/IZJWJgvXBHNV?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max) no-repeat center center fixed; background-size: cover;">
+			<div class="cf" style="background: url(https://images.unsplash.com/photo-1551812973-ff077737fb98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80) no-repeat center center fixed; background-size: cover;">
 				<div class="fr pa3 pa4-ns bg-grey measure-narrow f3">
 					<header class="bb pv4">
 						<h2 class="f2 fw7 ttu tracked lh-title mt0 mb3">Welcome to my site</h2>
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
-                        <div class="profilehide"><img class="profilehide" src="https://images.fok.al/content/IZJWJgvXBHNV?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"></div>
+                        <div class="profilehide"><img class="profilehide" src="https://images.unsplash.com/photo-1551812973-ff077737fb98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"></div>
 					</header>
 					<section class="pt5 pb4">
 						
