--- a/multimedia.html
+++ b/multimedia.html
@@ -112,24 +112,25 @@ $('#slider').cycle({});
       <div style="background-image:url(img/vccarbondioxide);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div>
+				   </div>
 			                  <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
         <a data-fancybox="gallery" href="img/vcdiversity">
       <div style="background-image:url(img/vcdiversity);"
            class="bg-center cover aspect-ratio--object"></div></a>
-    </div>
+    </div> </div>
 						                    <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
         <a data-fancybox="gallery" href="img/vcfrostdays">
       <div style="background-image:url(imgvcfrostdays);"
            class="bg-center cover aspect-ratio--object"></div></a>
-    </div>
+    </div> </div>
 									                      <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
         <a data-fancybox="gallery" href="img/vcsnowfall">
       <div style="background-image:url(img/vcsnowfall);"
            class="bg-center cover aspect-ratio--object"></div></a>
-    </div>
+    </div> </div>
 												   		  
 				  
                   <div class="fl w-50 w-third-m w-25-ns">
