--- a/multimedia.html
+++ b/multimedia.html
@@ -108,27 +108,27 @@ $('#slider').cycle({});
                     <h2>Graphs</h2>
 	                  <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
-        <a data-fancybox="gallery" href="img/vccarbondioxide">
-      <div style="background-image:url(img/vccarbondioxide);"
+        <a data-fancybox="gallery" href="img/vccarbondioxide.png">
+      <div style="background-image:url(img/vccarbondioxide.png);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div>
 				   </div>
 			                  <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
-        <a data-fancybox="gallery" href="img/vcdiversity">
-      <div style="background-image:url(img/vcdiversity);"
+        <a data-fancybox="gallery" href="img/vcdiversity.png">
+      <div style="background-image:url(img/vcdiversity.png);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div> </div>
 						                    <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
-        <a data-fancybox="gallery" href="img/vcfrostdays">
-      <div style="background-image:url(imgvcfrostdays);"
+        <a data-fancybox="gallery" href="img/vcfrostdays.png">
+      <div style="background-image:url(imgvcfrostdays.png);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div> </div>
 									                      <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
-        <a data-fancybox="gallery" href="img/vcsnowfall">
-      <div style="background-image:url(img/vcsnowfall);"
+        <a data-fancybox="gallery" href="img/vcsnowfall.png">
+      <div style="background-image:url(img/vcsnowfall.png);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div> </div>
 												   		  
