--- a/multimedia.html
+++ b/multimedia.html
@@ -122,7 +122,7 @@ $('#slider').cycle({});
 						                    <div class="fl w-50 w-third-m w-25-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
         <a data-fancybox="gallery" href="img/vcfrostdays.png">
-      <div style="background-image:url(imgvcfrostdays.png);"
+      <div style="background-image:url(img/vcfrostdays.png);"
            class="bg-center cover aspect-ratio--object"></div></a>
     </div> </div>
 									                      <div class="fl w-50 w-third-m w-25-ns">
