--- a/resume.html
+++ b/resume.html
@@ -101,12 +101,12 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Experience</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times-</b>Editorial Intern, Jaunary 2019-Present<br>Covering South San Luis Obispo County for a weekly paper</p>
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Web Editor, January 2019-present<br>Online multimedia assistance for college reporters </p>
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016-December 2018<br>College staff reporter, covering administration and student life </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy-</b>Journalism Fellow, September 2017-Present<br>Work with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe-</b>Busser, September 2016-July 2017
-</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times-</b>Editorial Intern, Jan. 2019 &ndash; April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Web Editor, Jan. 2019 &ndash; April 2019<br>Online multimedia assistance for college reporters </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News-</b>Multimedia Reporter, July 2016 &ndash; Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy-</b>Journalism Fellow, Sept. 2017 &ndash; Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
+	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus-</b>Caption writer, Jan. 2019 &ndash; April 2019; wrote captions and did layout for a 244-page photo book</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe-</b>Busser, Sept. 2016 &ndash; July 2017</p>
   </div>
 </article>
 
