--- a/home.html
+++ b/home.html
@@ -211,12 +211,12 @@
     <h1 class="mb3 mt0 lh-title">Experience</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-	<p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash</b>Web Editor, Jan. 2019&ndash;April 2019<br>Online multimedia assistance for college reporters </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
-	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus&mdash</b>Caption writer, Jan. 2019&ndash;April 2019; wrote captions and did layout for a 244-page photo book</p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe&mdash</b>Busser, Sept. 2016&ndash;July 2017</p>
+	<p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash;</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Web Editor, Jan. 2019&ndash;April 2019<br>Online multimedia assistance for college reporters </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash;</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
+	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus&mdash;</b>Caption writer, Jan. 2019&ndash;April 2019; wrote captions and did layout for a 244-page photo book</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe&mdash;</b>Busser, Sept. 2016&ndash;July 2017</p>
 </p>
   </div>
 </article>
@@ -226,8 +226,8 @@
     <h1 class="mb3 mt0 lh-title">Skills</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism&mdash</b>Data Journalism, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, News writing, InDesign, After Effects, Adobe Illustrator</p>
-    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding&mdash</b>Web Design, HTML, CSS, JQuery, SEO, Python
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism&mdash;</b>Data Journalism, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, News writing, InDesign, After Effects, Adobe Illustrator</p>
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding&mdash;</b>Web Design, HTML, CSS, JQuery, SEO, Python
 </p>
   </div>
 </article>
