--- a/resume.html
+++ b/resume.html
@@ -101,12 +101,12 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Experience</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash</b>Web Editor, Jan. 2019&ndash;April 2019<br>Online multimedia assistance for college reporters </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
-	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus&mdash</b>Caption writer, Jan. 2019&ndash;April 2019; wrote captions and did layout for a 244-page photo book</p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe&mdash</b>Busser, Sept. 2016&ndash;July 2017</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash;</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
+            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Web Editor, Jan. 2019&ndash;April 2019<br>Online multimedia assistance for college reporters </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash;</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
+	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus&mdash;</b>Caption writer, Jan. 2019&ndash;April 2019; wrote captions and did layout for a 244-page photo book</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe&mdash;</b>Busser, Sept. 2016&ndash;July 2017</p>
   </div>
 </article>
 
@@ -115,9 +115,9 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Education</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo&mdash</b>Journalism major, Law and Society minor, graduating in December 2019
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo&mdash;</b>Journalism major, Law and Society minor, graduating in December 2019
  </p>
-<p class="lh-copy measure mt4 mt0-ns"><b class="org">Redlands High School&mdash</b>Graduated June 2016
+<p class="lh-copy measure mt4 mt0-ns"><b class="org">Redlands High School&mdash;</b>Graduated June 2016
 </p>
   </div>
 </article>
@@ -128,10 +128,10 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Skills</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism&mdash</b>Data Journalism, Interviewing, News writing, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, InDesign, After Effects, Adobe Illustrator, Public Record Requests, SEO, Newspaper layout</p>
-    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding&mdash</b>Web Design, HTML, CSS, JaveScript, JQuery, Python
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism&mdash;</b>Data Journalism, Interviewing, News writing, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, InDesign, After Effects, Adobe Illustrator, Public Record Requests, SEO, Newspaper layout</p>
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding&mdash;</b>Web Design, HTML, CSS, JaveScript, JQuery, Python
 </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Miscellaneous&mdash</b>First Aid, CPR, AED, 
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Miscellaneous&mdash;</b>First Aid, CPR, AED, 
 </p>
   </div>
 </article>
@@ -143,12 +143,12 @@ $('#slider').cycle({});
   </header>
   <div class="fn fl-ns w-50-ns">
       <p class="lh-copy measure mt4 mt0-ns">
-          <b class="org">Lucas Clark and Aja Goare Scholarship&mdash</b>the Grant family, 2018<br>
-          <b class="org">Glenn Smith Memorial Scholarship&mdash</b>Cal Poly Journalism Department, 2018<br>
-          <b class="org">Jay Garner Memorial Scholarship&mdash</b>Cal Poly Journalsim Department, 2017<br>
-          <b class="org">Eagle Scout&mdash</b>Boy Scouts of America, 2015<br>
-          <b class="org">Merit of Superior Distinction&mdash</b>National Speech and Debate Association, 2016<br>
-          <b class="org">Advanced Placement Scholar of Distinction&mdash</b>College Board, 2016</p>
+          <b class="org">Lucas Clark and Aja Goare Scholarship&mdash;</b>the Grant family, 2018<br>
+          <b class="org">Glenn Smith Memorial Scholarship&mdash;</b>Cal Poly Journalism Department, 2018<br>
+          <b class="org">Jay Garner Memorial Scholarship&mdash;</b>Cal Poly Journalsim Department, 2017<br>
+          <b class="org">Eagle Scout&mdash;</b>Boy Scouts of America, 2015<br>
+          <b class="org">Merit of Superior Distinction&mdash;</b>National Speech and Debate Association, 2016<br>
+          <b class="org">Advanced Placement Scholar of Distinction&mdash;</b>College Board, 2016</p>
   </div>
 </article>
     
