--- a/home.html
+++ b/home.html
@@ -226,8 +226,9 @@
     <h1 class="mb3 mt0 lh-title">Skills</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Journalism&mdash;</b>Data Journalism, Adobe Premiere, Adobe Lightroom, Adobe Illustrator, Photography, News writing, InDesign, After Effects, Adobe Illustrator</p>
-    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Coding&mdash;</b>Web Design, HTML, CSS, JQuery, SEO, Python
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">News Gathering&mdash;</b>Web scraping, natural language processing, leg.info.gov searching, legislative analysis, data crunching, Microsoft Excel, Google Sheets, interviewing, beat developing</p>
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">Visualization&mdash;</b>Visual Composer, Adobe Illustrator, Infogram, Python, Photography with Sony a330 and Nike D3300s, Adobe Photoshop, Camera Raw, videography and video editing, editorial illustrating, photo collages</p>
+    <p class="lh-copy measure mt4 mt0-ns"><b class="org">News Publishing&mdash;</b>Lede writing, caption writing, headline writing, AP Style, WordPress, Search Engine Optimization, Adobe InDesign, HTML, CSS, Javascript, photo publishing, website maintenance, graphic design</p>
 </p>
   </div>
 </article>
