--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 	<!--The following displays language used in browser to interpret page -->
 	<meta charset="UTF-8"><!--The following line of code displays the page title on a browser tab -->
 	<title>Aidan McGloin | Multimedia Journalist, Photographer, Designer, Reporter</title><!--link tags are for linking to external files, in this case your CSS stylesheet-->
-	<link href="style3.css" rel="stylesheet" type="text/css"><!--link tags are for linking to external files, in this case a special CSS stylesheet-->
-	<link href="normalize.css" rel="stylesheet" type="text/css"><!--the following tag tells the browser to adjust the site according to screen size-->
+	<link href="https://aidanmcgloin.com/style3.css" rel="stylesheet" type="text/css"><!--link tags are for linking to external files, in this case a special CSS stylesheet-->
+	<link href="https://aidanmcgloin.com/normalize.css" rel="stylesheet" type="text/css"><!--the following tag tells the browser to adjust the site according to screen size-->
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"><!--The following code links to the jquery library -->
 
 	<script src="js/jquery-2.1.1.min.js" type="text/javascript">
@@ -117,14 +117,14 @@
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
                         <div class="profilehide"><img class="profilehide" src="https://images.unsplash.com/photo-1551812973-ff077737fb98?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"></div>
 					</header>
-					<section class="pt5 pb4">
+					<section class="pt5 pb4 lh-copy measure mt4 mt0-ns">
+						<p>
 						
-						
-						I am a journalism major at Cal Poly, where I have written for the student newspaper for three years and learned photojournalism, After Effects, Premiere, InDesign, Illustrator and a slew of multimedia skills.<br>
+						I write about government, administration, and environment. I have three years of journalism experience and am familiar with Nikon and Sony cameras, After Effects, Premiere, InDesign, Illustrator, data journalism, California government, and law.<br>
 						<br>
 						I hope you enjoy my work, and that this site shows what I can contribute.<br>
 						<br>
-						Stay connected through the platforms I linked to at the bottom.</p>
+						Stay connected through the platforms at the bottom.</p>
 					</section>
 				</div>
 			</div>
@@ -335,4 +335,3 @@
 	   }
 	}
 	</script>
-
