--- a/390/index.html
+++ b/390/index.html
@@ -94,7 +94,7 @@
 	<section class="row center">
                 <h1 class="no-underline" id="magazine">Magazine</h1><br>
 		            		    <article class=""><p>I designed this five-page spread using photos and text I wrote from a reporting trip to the Standing Rock Reservation in North Dakota.</p>
-                                    <iframe style="border:none;width: 100%;" src="//e.issuu.com/embed.html#38292619/70365046" allowfullscreen></iframe></article>
+                                    <iframe style="border: none; width: 100%; height: 900px;" src="//e.issuu.com/embed.html#38292619/70365046" allowfullscreen></iframe></article>
         	</section>
 
         	<section class="row center">
