--- a/photos.html
+++ b/photos.html
@@ -168,7 +168,7 @@
       <div class="cf">
         <div class="grow captioncontainer fl w-100 w-50-l pr2-l pb3">
           <a data-fancybox="gallery" href="https://images.unsplash.com/photo-1567196599197-5803a6b35610?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80"><img src="https://images.unsplash.com/photo-1567196599197-5803a6b35610?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80"></a>
-            <div><p>Design Village Village, Cal Poly | April 21, 2018</p></div> 
+            <div><p>Design Village, Cal Poly | April 21, 2018</p></div> 
         </div>
         <div class="grow captioncontainer  fl w-50 w-50-l pr1 pr0-l pl2-l pb3">
           <a data-fancybox="gallery" href="https://images.unsplash.com/photo-1567196643610-a04f531f9d28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"><img src="https://images.unsplash.com/photo-1567196643610-a04f531f9d28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"></a>
