--- a/home.html
+++ b/home.html
@@ -177,7 +177,7 @@
             <div><p>Aidan McGloin | Mustang News</p></div>
         </div>
         <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 lh-title">Face-off over budget may leave Cal Poly with limited funds</h1>
+          <h1 class="f3 lh-title">Rate of administrative hires decreases, but tenure track faculty still down from pre-recession levels</h1>
           <p>
            Ten new administrative positions were created and filled last year — a decrease in the growth of administrators on Cal Poly’s campus.<br><br>Administrative hires have outpaced hires for tenured and tenure track faculty  since 2007.
           </p>
