--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 
 <html>
@@ -99,14 +100,14 @@ $('#slider').cycle({});
 <article class="cf ph3 ph5-ns pv5">
   <header class="fn fl-ns w-50-ns pr4-ns">
     <h1 class="mb3 mt0 lh-title">Experience</h1>
-  </header>
+  </header><br><br><br><br>
   <div class="fn fl-ns w-50-ns">
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash;</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Covered South San Luis Obispo County for a weekly paper</p>
-            <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Web Editor, Jan. 2019&ndash;April 2019<br>Online multimedia assistance for college reporters </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>College staff reporter, covering administration and student life </p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash;</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Worked with an open government initiative using natural language processing to develop tools for journalists reporting on state legislature </p>
-	<p class="lh-copy measure mt4 mt0-ns"><b class="org">A Life in Focus&mdash;</b>Caption writer, Jan. 2019&ndash;April 2019; wrote captions and did layout for a 244-page photo book</p>
-      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Splash Cafe&mdash;</b>Busser, Sept. 2016&ndash;July 2017</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">CalMatters&mdash;</b>College Journalism Network Fellow, March 5. 2020&ndash;now<br>Reporting part-time for a California-wide non-profit about higher education. Writing mostly focuses on students financially impacted by coronavirus. Part of a team of five Californian student journalists hand selected by CalMatter’s College Journalism Network Editor</p>
+        <p class="lh-copy measure mt4 mt0-ns"><b class="org">New Times&mdash;</b>Editorial Intern, Jan. 2019&ndash;April 2019<br>Wrote for a weekly San Luis Obispo newspaper with a community/alternative model. Filed stories on environmental issues such as agricultural pest deterrents and water reclamation projects. Threw myself into unfamiliar environments and wrote headlines, photo captions and articles in AP Style. Took and edited own photos.</p>
+        <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>The Hill, Aug. 2019&ndash;now<br>Founded and leading an investigative data team at Mustang News, Cal Poly. Managing and teaching college reporters R, data visualization, database building with Google Sheets, California Public Record Act Requests and beat reporting.</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Mustang News&mdash;</b>Multimedia Reporter, July 2016&ndash;Dec. 2018, April 2019 &ndash; present<br>Filed a story weekly on administration or student life. Built a beat from faculty, administrators and students. Took my own photos. Designed 35 data graphs using Adobe Illustrator and published 70 stories. Shot photos with Sony A330s and Nikon D3300s/ D3400s. Edited photos with Adobe Lightroom. Occasionally helped layout paper on InDesign.</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal State Student Wire&mdash;</b>Editor, March 2020&ndash;now<br>Founded a wire service to share stories between student papers across the 23-campus California State University system. Wiring about three stories weekly across 13 participating papers.</p>
+      <p class="lh-copy measure mt4 mt0-ns"><b class="org">Digital Democracy&mdash;</b>Journalism Fellow, Sept. 2017&ndash;Sept. 2018<br>Founded a wire service to share stories between student papers across the 23-campus California State University system. Wiring about three stories weekly across 13 participating papers.</p>
   </div>
 </article>
 
@@ -115,7 +116,7 @@ $('#slider').cycle({});
     <h1 class="mb3 mt0 lh-title">Education</h1>
   </header>
   <div class="fn fl-ns w-50-ns">
-     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo&mdash;</b>Journalism major, Law and Society minor, graduating in December 2019
+     <p class="lh-copy measure mt4 mt0-ns"><b class="org">Cal Poly, San Luis Obispo&mdash;</b>Journalism major, Law and Society minor, graduating in June 2020
  </p>
 <p class="lh-copy measure mt4 mt0-ns"><b class="org">Redlands High School&mdash;</b>Graduated June 2016
 </p>
