--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 
 <html>
@@ -11,7 +12,7 @@
 <title>Aidan McGloin | Multimedia Journalist, Photographer, Designer, Reporter</title>
 
 <!--link tags are for linking to external files, in this case your CSS stylesheet-->
-<link href="style3.css" rel="stylesheet" type="text/css">
+<link href="https://aidanmcgloin.com/style3.css" rel="stylesheet" type="text/css">
 	
 <!--link tags are for linking to external files, in this case a special CSS stylesheet-->
 <link href="normalize.css" rel="stylesheet" type="text/css">
@@ -95,6 +96,25 @@ $('#slider').cycle({});
     <div class="row">
 <section class="center ">
     <h1 id="stories" class=no-underline>Blog</h1>
+    
+            		    <article>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="https://aidanmcgloin.com/blog/newsroom-tour-jan-11-2019">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+          <img src="https://lh3.googleusercontent.com/BsHdtEiTZjG_4HjDS9sJxVCUHI4o7bGPnxfJIB30smMSgMmV9yoksUqrZo_MlcKyOaICRpYKCWNjq9Api05gF_SN0KekBbXW0hnjNFkIGUxiIX_3q4ESsfUtZWHh6Ic-pmeWWsPI=w600-h315-p-k" class="db" alt="Aidan McGloin's grad pic: Aidan reading a print edition of the Swiss Republik.">
+            <div><p>Diego Rivera</p></div>
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 lh-title">ECONOMIC BARRIERS TO MEDIA ENTREPRENEURSHIP AND MEDIA PLURALITY</h1>
+          <p>
+           Anyone who knows me knows that I look toward history to guide us forward. Everything that's happened in the past is happening again now. The issues we have faced in the past have led us to think a certain way, to operate a certain way, to make certain choice that send us on certain paths. My senior project intended to focus on historical costs of news entrepreneurship, but evolved into a series of conversations with entrepreneurial publishers, ranging from non-profit to for-profit weeklies.
+          <p class="f6 lh-copy mv0">July 19, 2020</p>
+        </div>
+      </div>
+    </a>
+     </article>
+
+    
         		    <article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="https://aidanmcgloin.com/blog/newsroom-tour-jan-11-2019">
       <div class="flex flex-column flex-row-ns">
