--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
 	<div class="topdiv">
 		<!--Full Bleed Background-->
 		<article data-name="article-full-bleed-background">
-			<div class="cf" style="background: url(file:///Users/malheurenterprise/Desktop/SNV_6647.jpg); no-repeat fixed; background-size: cover; background-position: center;">
+			<div class="cf" style="background: url(https://lh3.googleusercontent.com/JooWJiwkEJEHOLAKml-TcaBuXDSSVqE5BzivHmpoq1kKUizPV2aRqcyEwUzuOOka9CnCIkbHjm-Yog2eTajInqoV2PH5bt24d3XL8fyIn8T-hfNCzDopqpC-LEPx8iRpQCky12du=w2400); no-repeat fixed; background-size: cover; background-position: center;">
            
 				
 				<div class="fl pa3 pa4-ns bg-grey measure-narrow f3">
