--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@ $('#slider').cycle({});
     <h1 id="stories" class=no-underline>Blog</h1>
     
             		    <article>
-    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="https://aidanmcgloin.com/blog/newsroom-tour-jan-11-2019">
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="https://aidanmcgloin.com/blog/senior_project.html">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <img src="https://lh3.googleusercontent.com/BsHdtEiTZjG_4HjDS9sJxVCUHI4o7bGPnxfJIB30smMSgMmV9yoksUqrZo_MlcKyOaICRpYKCWNjq9Api05gF_SN0KekBbXW0hnjNFkIGUxiIX_3q4ESsfUtZWHh6Ic-pmeWWsPI=w600-h315-p-k" class="db" alt="Aidan McGloin's grad pic: Aidan reading a print edition of the Swiss Republik.">
